--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,6 +1,6 @@
-<%= form_with model: @todo, local: true do |form| %>
-    <%= form.text_field :description %>
-    <%= form.check_box :completed %>
-    <%= form.submit class:"btn btn-primary" %>
+<%= form_with model: @todo, local: true do |f| %>
+    <%= f.text_field :description %>
+    <%= f.check_box :completed %>
+    <%= f.submit class:"btn btn-primary" %>
 <% end %>
 
