--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: @todo, local: true do |f| %>
+    <%= f.label :description, "Descripcion:" %>
     <%= f.text_field :description %>
     <%= f.check_box :completed %>
     <%= f.submit class:"btn btn-primary" %>
