--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,12 +1,16 @@
 <% @todos.each do |todo| %>
 
     <div class="row">
-        <div class="col-md-6 my-2">
+        <div class="col-md-7 my-2">
             <div class="card card-body bg-light">
                 <p> <%= todo.description %> </p>
+                <p> <%= todo.completed %> </p>
+
                 <div class="col-md-5">
-                    <%= link_to 'Show', todo, class: 'btn btn-primary' %>
-                    <%= link_to 'New', todos_new_path, class: 'btn btn-success'  %>
+                    <%= link_to 'Ver', todo, class: 'btn btn-primary' %>
+                    <%= link_to 'Nuevo ToDo', todos_new_path, class: 'btn btn-success'  %>
+                    <%= link_to 'Borrar', todo, method: :delete, class: 'btn btn-danger'  %>
+
                 </div>
             </div>
             
