--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,2 +1,8 @@
-<%= @todo.description %>
-
+<div class="row">
+    <div class="card card-body bg-light">
+        <div class="col-md-3 my-2">
+            <%= @todo.description %>
+            <%= @todo.completed %>
+        </div>
+    </div>
+</div>
