--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -8,7 +8,7 @@
 
                 <div class="col-md-5">
                     <%= link_to 'Ver', todo, class: 'btn btn-primary' %>
-                    <%= link_to 'Nuevo ToDo', todos_new_path, class: 'btn btn-success' %>
+                    <%= link_to 'Nuevo', todos_new_path, class: 'btn btn-success' %>
                     <%= link_to 'Borrar', todo, method: :delete, class: 'btn btn-danger'  %>
 
                 </div>
