--- a/app/views/todos/list.html.erb
+++ b/app/views/todos/list.html.erb
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-6">
-    <p> hola </p>
+    <% if todo.completed == true puts todo.description%>
     </div>
     <div class="col-md-6">
+    <% if todo.completed == false puts todo.description%>
     <% end %>
     </div>
 </div>
