--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @todo, local: true do |f| %>
     <div class="row">
-       <div class="col-md-3 my-2">
+       <div class="col-md-3 my-2", style="top:60px ; left:20px">
            <div class="card card-body bg-light">
                <h3><%= f.label :description, "Descripcion:" %></h3>
                <%= f.text_field :description %></br>
