--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,7 +1,7 @@
 <% @todos.each do |todo| %>
 
     <div class="row">
-        <div class="col-md-9 my-2">
+        <div class="col-md-9 my-2", style="top:60px">
             <div class="card card-body bg-light">
                 <p> <%= todo.description %> </p>
                 <p> <%= todo.completed %> </p>
