Arreglo del link list

--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
        <div class="col-md-3 my-2", style="top:60px ; left:20px">
            <div class="card card-body bg-light">
-               <h3><%= f.label :description, "Descripcion:" %></h3>
+               <h3><%= f.label :description, "Descripción:" %></h3>
                <%= f.text_field :description %></br>
                <%= f.check_box :completed %></br>
                <%= f.submit 'Listo', class:"btn btn-primary" %>
