--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,14 +1,14 @@
 <% @todos.each do |todo| %>
 
     <div class="row">
-        <div class="col-md-9 my-2", style="top:60px">
+        <div class="col-md-10 my-2", style="top:60px ; left:20px">
             <div class="card card-body bg-light">
                 <p> <%= todo.description %> </p>
                 <p> <%= todo.completed %> </p>
 
                 <div class="col-md-5">
                     <%= link_to 'Ver', todo, class: 'btn btn-primary' %>
-                    <%= link_to 'Nuevo', todos_new_path, class: 'btn btn-success' %>
+                    <%= link_to 'Editar', edit_path(todo), class: 'btn btn-success' %>
                     <%= link_to 'Borrar', todo, method: :delete, class: 'btn btn-danger'  %>
 
                 </div>
