--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render 'form' %>
 
-<div class="col-md-3 my-2">
+<div class="col-md-3 my-2" style="top:60px">
 <%= link_to 'Atrás', todos_path, class:"btn btn-secondary" %>
 </div>
 
