--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
-    <div class="card card-body bg-light">
+    <div class="card card-body bg-light", style="top:60px">
         <div class="col-md-3 my-2">
-            <%= @todo.description %>
-            <%= @todo.completed %>
+            <h3><%= @todo.description %></h3>
+            <p><%= @todo.completed %></p>
         </div>
     </div>
 </div>
