Vista list arreglada

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,7 +5,7 @@
   <ul class="navbar-nav mr-auto">
     
     <li class="nav-item">
-    <a class="navbar-brand"><%= link_to 'List', todos_list_path %> </a>
+    <a class="navbar-brand"><%= link_to 'Lista', list_path %> </a>
     </li>
     <li class="nav-item">
     <a class="navbar-brand"><%= link_to 'Formulario', todos_new_path %> </a>
