--- a/app/views/todos/list.html.erb
+++ b/app/views/todos/list.html.erb
@@ -1,8 +1,20 @@
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6", style="top:60px">
+      <% @todos.each do |todo| %>
+        <% if todo.completed? %>
+            <ul> <%= todo.description %> </ul>
+        <% end %>
+
+      <% end %>
+
     </div>
-    <div class="col-md-6">
- 
+    <div class="col-md-6", style="top:60px">
+    <% @todos.each do |todo| %>
+        <% if !todo.completed? %>
+            <ul> <%= todo.description %> </ul>
+        <% end %>
+
+      <% end %>
     </div>
 </div>
 
